<resources>
    <string name="app_name">PinPoi</string>
    <string name="title_activity_main">PinPoi</string>
    <string name="collection">Collection</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search_range">Search range: %1$d ㎞</string>
    <string name="title_placemark_list">POIs</string>
    <string name="title_placemark_detail">POI detail</string>
    <string name="validation_error">Validation error, please check values</string>
    <string name="title_placemarkcollection_list">POI Collections</string>
    <string name="title_placemarkcollection_detail">POI Collection Detail</string>
    <string name="category">Category</string>
    <string name="source">Source URL (or file path)</string>
    <string name="description">Description</string>
    <string name="update">Update %1$s</string>
    <string name="update_collection_success">Update success, %1$,d POIs imported (%2$s)</string>
    <string name="fileFormatFilter">File format filter</string>
    <string name="error_update">Update error %1$s: %2$s</string>
    <string name="error_file_type_unknown">Please choose a file format</string>
    <string name="error_search">Search error: %1$s</string>
    <string name="n_placemarks_found">%1$,d POIs found</string>
    <string name="action_placemark_collections">Manage collections</string>
    <string name="location">Location: %1$s %2$s</string>
    <string name="placemark_collection_name">POI collection name</string>
    <string name="delete_placemark_collection_confirm">Delete POI collection?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="use_gps">Use GPS</string>
    <string name="search_address">Search address</string>
    <string name="insert_address">Insert address</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="error_network">Network error</string>
    <string name="error_no_address_found">Error: no address found</string>
    <string name="close">Close</string>
    <string name="poi_count">%1$,d POIs in this collection</string>
    <string name="last_update">Last update at %1$tc</string>
    <string name="name_filter">Name filter</string>
    <string name="only_favourite">Only favourites</string>
    <string name="action_create_backup">Create backup on SD card</string>
    <string name="action_restore_backup">Restore backup from SD card</string>
    <string name="backup_file">Backup file is %s</string>
    <string name="menu_backup">Backup</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="any_filter">(any)</string>
    <string name="show_map">Show map</string>
    <string name="web_site">Web site</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="advertising">Advertising</string>
</resources>
