<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fillViewport="true"
                                                 android:padding="@dimen/activity_vertical_margin"
                                                 tools:context="io.github.fvasco.pinpoi.MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

            <Switch
                    android:id="@+id/switchGps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/use_gps"/>

            <Button
                    android:id="@+id/searchAddressButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSearchAddress"
                    android:text="@string/search_address"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:labelFor="@+id/latitudeText"
                        android:text="@string/latitude"/>

                <EditText
                        android:id="@+id/latitudeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:labelFor="@+id/longitudeText"
                        android:text="@string/longitude"/>

                <EditText
                        android:id="@+id/longitudeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:labelFor="@+id/nameFilterText"
                        android:text="@string/name_filter"/>

                <EditText
                        android:id="@+id/nameFilterText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:inputType="textFilter|textCapCharacters"
                        android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:labelFor="@+id/categoryButton"
                        android:text="@string/category"/>

                <Button
                        android:id="@+id/categoryButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:onClick="openPlacemarkCategoryChooser"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:labelFor="@+id/collectionButton"
                        android:text="@string/collection"/>

                <Button
                        android:id="@+id/collectionButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:onClick="openPlacemarkCollectionChooser"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/rangeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/search_range"/>

            <SeekBar
                    android:id="@+id/rangeSeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:paddingBottom="2dp" android:paddingTop="2dp"/>

            <CheckBox
                    android:id="@+id/favouriteCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/only_favourite"/>

            <CheckBox
                    android:id="@+id/showMapCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_map"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/searchPlacemarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:onClick="onSearchPoi"
            android:src="@drawable/ic_search_white"/>
</android.support.design.widget.CoordinatorLayout>