<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/description"
        android:padding="16dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="16dp"
        tools:context="io.github.fvasco.pinpoi.PlacemarkCollectionDetailFragment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/category"
        android:padding="16dp"
        android:text="@string/category" />

    <AutoCompleteTextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapCharacters"
        android:padding="16dp"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:labelFor="@+id/source"
            android:padding="16dp"
            android:text="@string/source" />

        <ImageButton
            android:id="@+id/browseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:contentDescription="Browse file"
            android:src="@drawable/abc_ic_search_api_mtrl_alpha" />
    </RelativeLayout>

    <EditText
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:padding="16dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <TextView
        android:id="@+id/poi_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>